Minor alignment issue with input box

--- a/src/tagged.css
+++ b/src/tagged.css
@@ -44,6 +44,8 @@
   font-size: 1em;
   font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 
+  vertical-align:baseline;
+
   border: none;
   background: none;
 
